--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,6 +262,9 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="y">y =</string>
     <string name="z">z =</string>
     <string name="press_back_to_get_started">All Set! Press back to get started!</string>
+    <string name="splash_icon">Splash Icon</string>
+    <string name="sense_it_all_abbreviation">S.I.A</string>
+    <string name="device_test_splash">DEVICE TEST</string>
 
     <string-array name="dummy_headers">
         <item>SAR AND YOUR BODY</item>
