--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Sense It All!</string>
+    <string name="app_name_simple">Sense It All</string>
 
     <string-array name="lightPercentages">
         <item>0 to 10 %</item>
